[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
paho-mqtt = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
tokio-postgres ={ version = "0.7.10", features = ["with-chrono-0_4"]}
uuid ={ version = "1.7.0", features = ["v7", "rng"]}
chrono = "0.4.33"